--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,6 @@
     "@testing-library/user-event": "^13.5.0",
     "ical2json": "^3.2.0",
     "ics-to-json": "^1.0.0",
-    "nepali-date": "^0.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -37,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nepali-date": "^0.1.3"
   }
 }
